<resources>
    <string name="app_name">ChatAplication</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login_button">LOGIN</string>
    <string name="register_button">REGISTER</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">E-mail</string>
    <string name="gender">gender:</string>
    <string-array name="spinner_item">
        <item>male</item>
        <item>female</item>
    </string-array>
    <string name="check_box">Accept Notification</string>
    <string name="log_out">LOG OUT</string>
    <string name="my_friend">My Friend</string>
    <string name="message_text">message text</string>
    <string name="send">send</string>
    <string name="message_send">Message is sent!</string>
    <string name="birth_date">Birth date:</string>
    <string name="my_chat_list">My chat list</string>
    <string name="contact1">Josie Enyeart</string>
    <string name="contact2">Mario Gartrell</string>
    <string name="contact3">Rachel Kuester</string>
    <string name="contact4">Stacia Gilmour</string>
    <string name="contact5">Robbie Stam</string>
    <string name="message1">Hey!!!</string>
    <string name="message2">Hello how are you?</string>
    <string name="message3">I am fine thanks, whats up?</string>
    <string name="message4">Long time no see</string>
    <string name="message5">Nothiing special, will i see you tonight?</string>
    <string name="message6">Sure meet me at 8</string>
    <string name="message7">Fine, see you</string>
</resources>
