<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="bojan.strbac.chataplication.RegisterActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/user_reg_id"
            android:ems="7"
            android:layout_marginLeft="9dp"
            android:layout_marginTop="5dp"
            android:hint="@string/username"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/first_name_id"
            android:ems="8"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:hint="@string/first_name"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pass_reg_id"
            android:ems="7"
            android:layout_marginLeft="9dp"
            android:layout_marginTop="5dp"
            android:hint="@string/password"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/last_name_id"
            android:ems="8"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:hint="@string/last_name"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/email_id"
            android:ems="7"
            android:layout_marginLeft="9dp"
            android:layout_marginTop="5dp"
            android:hint="@string/email"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gender_id"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="6dp"
            android:text="@string/gender"
            />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gender_spinner_id"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="6dp"
            android:entries="@array/spinner_item">

        </Spinner>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/check_id"
            android:layout_marginLeft="9dp"
            android:hint="@string/check_box"
            android:shadowColor="@color/colorDarkRed"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Birth date"/>

        <DatePicker
            android:layout_width="350dp"
            android:layout_height="270dp"
            android:id="@+id/date_id"
            android:layout_gravity="center"
            android:datePickerMode="spinner"
            android:headerBackground="@color/colorDarkRed"
            android:spinnersShown="false">

        </DatePicker>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/reg_activity_button_id"
            android:layout_gravity="center"
            android:background="@color/colorDarkRed"
            android:text="@string/register_button"/>

    </LinearLayout>

</LinearLayout>
