<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="bojan.strbac.chataplication.MessageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18dp"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/contact_name_ID"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/refresh_messages"
            android:text="@string/refresh"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mes_log_out_id"
            android:text="@string/log_out"
            android:background="@color/colorDarkRed"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"/>

    </LinearLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/message_list_ID"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="55dp"
        android:transcriptMode="alwaysScroll"
        android:stackFromBottom="true">
    </ListView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="460dp">

        <EditText
            android:id="@+id/mes_message_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:ems="10"
            android:hint="@string/message_text" />

        <Button
            android:id="@+id/mes_send_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:background="@color/colorPrimaryDark"
            android:enabled="false"
            android:text="@string/send" />

    </LinearLayout>

</RelativeLayout>
